AC_INIT(chklref,2.5, jerome.lelong@gmail.com)

PKGNAME=chklref
AC_PROG_INSTALL

AC_ARG_WITH(texmf-prefix,
        [  --with-texmf-prefix   prefix to use for texmf. By default, prefix/share/texmf is used],
        [with_texmf_prefix=$withval])

if test "x$prefix" = "xNONE" ; then
   prefix=/usr/local
fi

echo  "$with_texmf_prefix" 
if test "x$with_texmf_prefix" != "x" ; then
   texmf_prefix=$with_texmf_prefix
else
   texmf_prefix=$prefix/share/texmf
fi

bindir=$prefix/bin
LATEXDIR=$texmf_prefix/tex/latex/$PKGNAME
DOCDIR=$texmf_prefix/doc/latex/$PKGNAME
SCRIPTSDIR=$texmf_prefix/scripts/$PKGNAME

AC_SUBST(PKGNAME)
AC_SUBST(prefix)
AC_SUBST(bindir)
AC_SUBST(LATEXDIR)
AC_SUBST(DOCDIR)
AC_SUBST(SCRIPTSDIR)

AC_PATH_PROG(latex_path, latex)
if test "x$latex_path" = "x" ; then    
   AC_MSG_ERROR("latex not found")
fi
AC_PATH_PROG(pdflatex_path, pdflatex)
if test "x$pdflatex_path" = "x" ; then    
   AC_MSG_ERROR("pdflatex not found")
fi
AC_PATH_PROG(perl_path, perl)
if test "x$perl_path" = "x" ; then    
   AC_MSG_ERROR("perl not found")
fi

AC_SUBST(latex_path)
AC_SUBST(pdflatex_path)
AC_SUBST(perl_path)

AC_OUTPUT(src/Makefile src/chklref)
